--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
 		"@typescript-eslint/indent": ["error", "tab"],
 		"@typescript-eslint/no-unused-vars": [2, { "args": "none" }],
     "@typescript-eslint/interface-name-prefix" : [0, "never-prefix"],
-    "@typescript-eslint/explicit-function-return-type": 0
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-empty-interface": 0
   },
   "settings": {
     "react": {
