--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
+    "dev": "run-p dev:*",
     "dev:server": "webpack --config ./webpack/development/server.ts --watch",
     "dev:client": "webpack --config ./webpack/development/client.ts --watch",
     "dev:run": "nodemon --watch build --exec \"node build/server/bundle.js\"",
-    "prod": "npm-run-all --parallel prod:*",
+    "prod": "run-p prod:*",
     "prod:server": "webpack --config ./webpack/production/server.ts --watch",
     "prod:client": "webpack --config ./webpack/production/client.ts --watch",
     "prod:run": "nodemon --watch build --exec \"node build/server/bundle.js\"",
@@ -27,6 +27,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -34,6 +35,7 @@
     "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.0.1",
     "@types/express": "^4.17.2",
     "@types/mini-css-extract-plugin": "^0.8.0",
     "@types/node": "^12.12.14",
@@ -47,16 +49,13 @@
     "@types/webpack-merge": "^4.1.5",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
-    "css-loader": "^3.2.1",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.17.0",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
-    "mini-css-extract-plugin": "^0.8.0",
     "nodemon": "^2.0.1",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "rimraf": "^3.0.0",
     "terser-webpack-plugin": "^2.2.2",
     "ts-loader": "^6.2.1",
